fix modal spacing

--- a/styles/web/sass/core/_legacy/bootstrap/_bootstrap.scss
+++ b/styles/web/sass/core/_legacy/bootstrap/_bootstrap.scss
@@ -6026,10 +6026,10 @@ button.close {
     margin: 0;
     line-height: 1.42857143;
 }
-.modal-body {
-    position: relative;
-    padding: 15px;
-}
+//.modal-body {
+//    position: relative;
+//    padding: 15px;
+//}
 .modal-footer {
     padding: 15px;
     text-align: right;
